add article feature
